Fixed layout bugs on home page

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   --fs-600: clamp(4rem, 5vw, 6rem);
   --fs-500: clamp(1.5rem, 2vw, 2rem);
   --fs-400: 1.15rem;
-  --fs-300: 0.9rem;
+  --fs-300: 1rem;
 
   /* Colour variables */
   --bg-grey: #F7F3F0;
@@ -169,7 +169,7 @@ ol {
 }
 
 /* Styling for the in-text link*/
-.in-text-link {
+.in-text-link, .view-button {
   /* Link animation from: https://codepen.io/team/css-tricks/pen/gOXMLLY */
   color: var(--washed-black);
   box-shadow: inset 0 0 0 0 var(--warm-orange);
@@ -180,7 +180,12 @@ ol {
 
 .in-text-link:hover {
   color: var(--bright-white);
-  box-shadow: inset 200px 0 0 0 var(--warm-orange);
+  box-shadow: inset 300px 0 0 0 var(--warm-orange);
+}
+
+.view-button:hover {
+  color: var(--bright-white);
+  box-shadow: inset 70px 0 0 0 var(--warm-orange);
 }
 
 .clickable-img {
@@ -344,6 +349,7 @@ nav .mono-text {
 */
 
 .home-content {
+  max-height: 100vh;
   margin-bottom: 20rem;
 }
 
@@ -406,20 +412,20 @@ nav .mono-text {
 }
 
 .about-description {
-  position: relative;
+  /* position: relative; */
   margin-left: clamp(1rem, 6vw, 10rem);
   margin-top: clamp(3rem, 10vw, 10rem);
 }
 
-.about-description p{
+.about-description p {
   max-width: 45%;
 }
 
 .hero-caption {
-  position: absolute;
-  text-align: right;
-  right: 0;
-  bottom: 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-top: clamp(3rem, 10vh, 5rem);
 }
 
 @media (max-width: 1100px) {
@@ -451,7 +457,6 @@ nav .mono-text {
   }
 
   .about-description {
-    margin: 0;
     bottom: -10vh;
   }
   
@@ -471,6 +476,22 @@ nav .mono-text {
 
 .projects-wrapper {
   display: flex;
+}
+
+.project {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.project h3 {
+  /* Exlcude certain flex items from styling: https://www.w3schools.com/cssref/css3_pr_align-self.php */
+  align-self: flex-start;
+}
+
+.project .view-button {
+  margin-top: 0.5rem;
 }
 
 #projects h2 {
